Add ElasticBeanstalk ignores and python requirements

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,8 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
